--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -12,7 +12,7 @@
 // home
 
 .home-container {
-// background: url(../../images/pierres-zen-equilibre-plage-espace-copie-lumiere-du-lever-du-soleil-meditation-relaxation-ai-generative.jpg);
+background: url();
 min-height: 100vh;
 }
 
@@ -57,6 +57,12 @@ min-height: 100vh;
 
 
 // end a propos
+
+// contact
+
+       
+
+// end contact
 
 
 
