--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -60,7 +60,14 @@ min-height: 100vh;
 
 // contact
 
-       
+     
+iframe{
+  width:100%
+  // padding-right: 0px;
+}
+.contact-card {
+  
+}  
 
 // end contact
 
